jlatexmath (1.0.3)
	* Add macro \st (i.e. strike-through)

	* Fix arrow shift in \overrightarrow macro

	* Fix several bugs due to modification in VRowAtom.

jlatexmath (1.0.2)
       	* Fix for ticket 1113: by default interline is 1ex (can be set with TeXIconBuilder::setInterLineSpacing (see Example7))

	* Fix bug with maxwidth.

        * Use default Java font when char is in an unknown unicode block.   

        * Fix bug in \LaTeX (due to modification of EM value)

        * Fix bug in parser when no chars after command \cr

        * Add missing glyph in jlm_cmex10.ttf (char 183)

	* jlatexmath-minimal.zip renamed to jlatexmath-minimal-${version}.zip

jlatexmath (1.0.1)
	* Negative spaces were not taken into accound at the end of a horizontal
          box.

        * Add command \Join.

        * Fix bad space around \begin{array}...\end{array}

        * There were no spaces around fraction (\nulldelimiterspace).

        * Eat one white (if it exists) after a \cr.

        * Color name must not be case sensitive

        * Add an example to connect C++ and JLaTeXMath in using Giws

        * Fix bad cmex10.ttf rendering with OpenJDK

	* Add \L, \l, \yen, \mathsterling (in unicode too)

	* Handle nbsp, \P and \S

	* Fix ligatures definitions in XML (\textbf{\text{-7}} was printed as \Omega)

	* Handle auto-break after a binop or relation op.

	* Spaces were not ignored in tabular options.

	* Bad positions of the exponent & indice with Bigr{|}_1^3

	* Fix bug with line-breaking (infinite loop on "\\ {abcdef}a" or exceptions).

	* Option added for max. width vs exact width.
	  Thanks to Felix Natter for the patch.

	* Update the example to use the TeXIconBuilder.
          Thanks to Felix Natter for the patch.

jlatexmath (1.0.0)
	* Fix bug 767: U with umlaut was shown as O with umlaut

	* Handle breakline in math mode

	* Remove String::isEmpty for Java 5 compatibility

        * Fix bug 907: bad rendering of text{text{x_1Test}}

jlatexmath (0.9.8)