@@ -1,4 +1,6 @@
 <?xml version='1.0'?>
 <Font name="jlm_special.ttf" id="jlm_special" space="0.0" xHeight="0.233333" quad="1.000003" >
+  <Char code="69" width="0.705" height="0.700" depth="0.015"/>
+  <Char code="101" width="0.5" height="0.680" depth="0.013"/>
   <Char code="109" width="0.5" height="0.450" depth="0.2"/>
 </Font>
